dsp/haskelldsp/Numeric/Special/Bessel_stub_ffi.h


extern void* prim_bessel_y1_e(double x);

extern double access_prim_bessel_y1_e_val(HsPtr);

extern double access_prim_bessel_y1_e_err(HsPtr);

extern int access_prim_bessel_y1_e_gc_failed(HsPtr);

extern void* access_prim_bessel_y1_e_gc_failstring(HsPtr);

extern double prim_bessel_yl(int n,double x);

extern void* prim_bessel_yl_e(int l,double x);

extern double access_prim_bessel_yl_e_val(HsPtr);

extern double access_prim_bessel_yl_e_err(HsPtr);

extern int access_prim_bessel_yl_e_gc_failed(HsPtr);

extern void* access_prim_bessel_yl_e_gc_failstring(HsPtr);

extern double prim_bessel_i0_scaled(double x);

extern void* prim_bessel_i0_scaled_e(double x);

extern double access_prim_bessel_i0_scaled_e_val(HsPtr);

extern double access_prim_bessel_i0_scaled_e_err(HsPtr);

extern int access_prim_bessel_i0_scaled_e_gc_failed(HsPtr);

extern void* access_prim_bessel_i0_scaled_e_gc_failstring(HsPtr);

extern double prim_bessel_i1_scaled(double x);

extern void* prim_bessel_i1_scaled_e(double x);

extern double access_prim_bessel_i1_scaled_e_val(HsPtr);

extern double access_prim_bessel_i1_scaled_e_err(HsPtr);

extern int access_prim_bessel_i1_scaled_e_gc_failed(HsPtr);

extern void* access_prim_bessel_i1_scaled_e_gc_failstring(HsPtr);

extern double prim_bessel_il_scaled(int n,double x);

extern void* prim_bessel_il_scaled_e(int l,double x);

extern double access_prim_bessel_il_scaled_e_val(HsPtr);

extern double access_prim_bessel_il_scaled_e_err(HsPtr);

extern int access_prim_bessel_il_scaled_e_gc_failed(HsPtr);

extern void* access_prim_bessel_il_scaled_e_gc_failstring(HsPtr);

extern double prim_bessel_k0_scaled(double x);

extern void* prim_bessel_k0_scaled_e(double x);

extern double access_prim_bessel_k0_scaled_e_val(HsPtr);

extern double access_prim_bessel_k0_scaled_e_err(HsPtr);

extern int access_prim_bessel_k0_scaled_e_gc_failed(HsPtr);

extern void* access_prim_bessel_k0_scaled_e_gc_failstring(HsPtr);

extern double prim_bessel_k1_scaled(double x);

extern void* prim_bessel_k1_scaled_e(double x);

extern double access_prim_bessel_k1_scaled_e_val(HsPtr);

extern double access_prim_bessel_k1_scaled_e_err(HsPtr);

extern int access_prim_bessel_k1_scaled_e_gc_failed(HsPtr);

extern void* access_prim_bessel_k1_scaled_e_gc_failstring(HsPtr);

extern double prim_bessel_kl_scaled(int n,double x);

extern void* prim_bessel_kl_scaled_e(int l,double x);

extern double access_prim_bessel_kl_scaled_e_val(HsPtr);

extern double access_prim_bessel_kl_scaled_e_err(HsPtr);

extern int access_prim_bessel_kl_scaled_e_gc_failed(HsPtr);

extern void* access_prim_bessel_kl_scaled_e_gc_failstring(HsPtr);