dsp/haskelldsp/Numeric/Special/Bessel.hs


bessel_y1_e :: Double -> (Double,Double)
bessel_y1_e x =
  unsafePerformIO(
    prim_bessel_y1_e x
    >>= \ gc_result ->
    access_prim_bessel_y1_e_val (gc_result :: Addr) >>= \ val ->
    access_prim_bessel_y1_e_err (gc_result :: Addr) >>= \ err ->
    access_prim_bessel_y1_e_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
    access_prim_bessel_y1_e_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
    if ( gc_failed /= (0::Int))
    then unmarshall_string_ gc_failstring >>=  ioError  . userError
    else (return ((val,err))))
foreign import  ccall unsafe "Bessel_stub_ffi.h prim_bessel_y1_e" prim_bessel_y1_e :: Double -> IO (Addr)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_y1_e_val :: Addr -> IO (Double)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_y1_e_err :: Addr -> IO (Double)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_y1_e_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_y1_e_gc_failstring :: Addr -> IO (Addr)

-------------------------------------------------------------------------------

bessel_yl :: Int -> Double -> Double
bessel_yl n x =
  unsafePerformIO(
    prim_bessel_yl n x
    >>= \  y  ->
    (return (y)))
foreign import  ccall unsafe "Bessel_stub_ffi.h prim_bessel_yl" prim_bessel_yl :: Int -> Double -> IO (Double)

bessel_yl_e :: Int -> Double -> (Double,Double)
bessel_yl_e l x =
  unsafePerformIO(
    prim_bessel_yl_e l x
    >>= \ gc_result ->
    access_prim_bessel_yl_e_val (gc_result :: Addr) >>= \ val ->
    access_prim_bessel_yl_e_err (gc_result :: Addr) >>= \ err ->
    access_prim_bessel_yl_e_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
    access_prim_bessel_yl_e_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
    if ( gc_failed /= (0::Int))
    then unmarshall_string_ gc_failstring >>=  ioError  . userError
    else (return ((val,err))))
foreign import  ccall unsafe "Bessel_stub_ffi.h prim_bessel_yl_e" prim_bessel_yl_e :: Int -> Double -> IO (Addr)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_yl_e_val :: Addr -> IO (Double)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_yl_e_err :: Addr -> IO (Double)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_yl_e_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_yl_e_gc_failstring :: Addr -> IO (Addr)

-------------------------------------------------------------------------------

bessel_i0_scaled :: Double -> Double
bessel_i0_scaled x =
  unsafePerformIO(
    prim_bessel_i0_scaled x
    >>= \  y  ->
    (return (y)))
foreign import  ccall unsafe "Bessel_stub_ffi.h prim_bessel_i0_scaled" prim_bessel_i0_scaled :: Double -> IO (Double)

bessel_i0_scaled_e :: Double -> (Double,Double)
bessel_i0_scaled_e x =
  unsafePerformIO(
    prim_bessel_i0_scaled_e x
    >>= \ gc_result ->
    access_prim_bessel_i0_scaled_e_val (gc_result :: Addr) >>= \ val ->
    access_prim_bessel_i0_scaled_e_err (gc_result :: Addr) >>= \ err ->
    access_prim_bessel_i0_scaled_e_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
    access_prim_bessel_i0_scaled_e_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
    if ( gc_failed /= (0::Int))
    then unmarshall_string_ gc_failstring >>=  ioError  . userError
    else (return ((val,err))))
foreign import  ccall unsafe "Bessel_stub_ffi.h prim_bessel_i0_scaled_e" prim_bessel_i0_scaled_e :: Double -> IO (Addr)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_i0_scaled_e_val :: Addr -> IO (Double)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_i0_scaled_e_err :: Addr -> IO (Double)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_i0_scaled_e_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_i0_scaled_e_gc_failstring :: Addr -> IO (Addr)

-------------------------------------------------------------------------------

bessel_i1_scaled :: Double -> Double
bessel_i1_scaled x =
  unsafePerformIO(
    prim_bessel_i1_scaled x
    >>= \  y  ->
    (return (y)))
foreign import  ccall unsafe "Bessel_stub_ffi.h prim_bessel_i1_scaled" prim_bessel_i1_scaled :: Double -> IO (Double)

bessel_i1_scaled_e :: Double -> (Double,Double)
bessel_i1_scaled_e x =
  unsafePerformIO(
    prim_bessel_i1_scaled_e x
    >>= \ gc_result ->
    access_prim_bessel_i1_scaled_e_val (gc_result :: Addr) >>= \ val ->
    access_prim_bessel_i1_scaled_e_err (gc_result :: Addr) >>= \ err ->
    access_prim_bessel_i1_scaled_e_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
    access_prim_bessel_i1_scaled_e_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
    if ( gc_failed /= (0::Int))
    then unmarshall_string_ gc_failstring >>=  ioError  . userError
    else (return ((val,err))))
foreign import  ccall unsafe "Bessel_stub_ffi.h prim_bessel_i1_scaled_e" prim_bessel_i1_scaled_e :: Double -> IO (Addr)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_i1_scaled_e_val :: Addr -> IO (Double)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_i1_scaled_e_err :: Addr -> IO (Double)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_i1_scaled_e_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_i1_scaled_e_gc_failstring :: Addr -> IO (Addr)

-------------------------------------------------------------------------------

bessel_il_scaled :: Int -> Double -> Double
bessel_il_scaled n x =
  unsafePerformIO(
    prim_bessel_il_scaled n x
    >>= \  y  ->
    (return (y)))
foreign import  ccall unsafe "Bessel_stub_ffi.h prim_bessel_il_scaled" prim_bessel_il_scaled :: Int -> Double -> IO (Double)

bessel_il_scaled_e :: Int -> Double -> (Double,Double)
bessel_il_scaled_e l x =
  unsafePerformIO(
    prim_bessel_il_scaled_e l x
    >>= \ gc_result ->
    access_prim_bessel_il_scaled_e_val (gc_result :: Addr) >>= \ val ->
    access_prim_bessel_il_scaled_e_err (gc_result :: Addr) >>= \ err ->
    access_prim_bessel_il_scaled_e_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
    access_prim_bessel_il_scaled_e_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
    if ( gc_failed /= (0::Int))
    then unmarshall_string_ gc_failstring >>=  ioError  . userError
    else (return ((val,err))))
foreign import  ccall unsafe "Bessel_stub_ffi.h prim_bessel_il_scaled_e" prim_bessel_il_scaled_e :: Int -> Double -> IO (Addr)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_il_scaled_e_val :: Addr -> IO (Double)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_il_scaled_e_err :: Addr -> IO (Double)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_il_scaled_e_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_il_scaled_e_gc_failstring :: Addr -> IO (Addr)

-------------------------------------------------------------------------------

bessel_k0_scaled :: Double -> Double
bessel_k0_scaled x =
  unsafePerformIO(
    prim_bessel_k0_scaled x
    >>= \  y  ->
    (return (y)))
foreign import  ccall unsafe "Bessel_stub_ffi.h prim_bessel_k0_scaled" prim_bessel_k0_scaled :: Double -> IO (Double)

bessel_k0_scaled_e :: Double -> (Double,Double)
bessel_k0_scaled_e x =
  unsafePerformIO(
    prim_bessel_k0_scaled_e x
    >>= \ gc_result ->
    access_prim_bessel_k0_scaled_e_val (gc_result :: Addr) >>= \ val ->
    access_prim_bessel_k0_scaled_e_err (gc_result :: Addr) >>= \ err ->
    access_prim_bessel_k0_scaled_e_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
    access_prim_bessel_k0_scaled_e_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
    if ( gc_failed /= (0::Int))
    then unmarshall_string_ gc_failstring >>=  ioError  . userError
    else (return ((val,err))))
foreign import  ccall unsafe "Bessel_stub_ffi.h prim_bessel_k0_scaled_e" prim_bessel_k0_scaled_e :: Double -> IO (Addr)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_k0_scaled_e_val :: Addr -> IO (Double)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_k0_scaled_e_err :: Addr -> IO (Double)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_k0_scaled_e_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_k0_scaled_e_gc_failstring :: Addr -> IO (Addr)

-------------------------------------------------------------------------------

bessel_k1_scaled :: Double -> Double
bessel_k1_scaled x =
  unsafePerformIO(
    prim_bessel_k1_scaled x
    >>= \  y  ->
    (return (y)))
foreign import  ccall unsafe "Bessel_stub_ffi.h prim_bessel_k1_scaled" prim_bessel_k1_scaled :: Double -> IO (Double)

bessel_k1_scaled_e :: Double -> (Double,Double)
bessel_k1_scaled_e x =
  unsafePerformIO(
    prim_bessel_k1_scaled_e x
    >>= \ gc_result ->
    access_prim_bessel_k1_scaled_e_val (gc_result :: Addr) >>= \ val ->
    access_prim_bessel_k1_scaled_e_err (gc_result :: Addr) >>= \ err ->
    access_prim_bessel_k1_scaled_e_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
    access_prim_bessel_k1_scaled_e_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
    if ( gc_failed /= (0::Int))
    then unmarshall_string_ gc_failstring >>=  ioError  . userError
    else (return ((val,err))))
foreign import  ccall unsafe "Bessel_stub_ffi.h prim_bessel_k1_scaled_e" prim_bessel_k1_scaled_e :: Double -> IO (Addr)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_k1_scaled_e_val :: Addr -> IO (Double)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_k1_scaled_e_err :: Addr -> IO (Double)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_k1_scaled_e_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_k1_scaled_e_gc_failstring :: Addr -> IO (Addr)

-------------------------------------------------------------------------------

bessel_kl_scaled :: Int -> Double -> Double
bessel_kl_scaled n x =
  unsafePerformIO(
    prim_bessel_kl_scaled n x
    >>= \  y  ->
    (return (y)))
foreign import  ccall unsafe "Bessel_stub_ffi.h prim_bessel_kl_scaled" prim_bessel_kl_scaled :: Int -> Double -> IO (Double)

bessel_kl_scaled_e :: Int -> Double -> (Double,Double)
bessel_kl_scaled_e l x =
  unsafePerformIO(
    prim_bessel_kl_scaled_e l x
    >>= \ gc_result ->
    access_prim_bessel_kl_scaled_e_val (gc_result :: Addr) >>= \ val ->
    access_prim_bessel_kl_scaled_e_err (gc_result :: Addr) >>= \ err ->
    access_prim_bessel_kl_scaled_e_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
    access_prim_bessel_kl_scaled_e_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
    if ( gc_failed /= (0::Int))
    then unmarshall_string_ gc_failstring >>=  ioError  . userError
    else (return ((val,err))))
foreign import  ccall unsafe "Bessel_stub_ffi.h prim_bessel_kl_scaled_e" prim_bessel_kl_scaled_e :: Int -> Double -> IO (Addr)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_kl_scaled_e_val :: Addr -> IO (Double)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_kl_scaled_e_err :: Addr -> IO (Double)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_kl_scaled_e_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_kl_scaled_e_gc_failstring :: Addr -> IO (Addr)

-------------------------------------------------------------------------------
